--- a/ui/css/design-system/z-index.scss
+++ b/ui/css/design-system/z-index.scss
@@ -4,7 +4,7 @@
 $dropdown-z-index: 30;
 $token-icon-z-index: 15;
 $container-z-index: 15;
-$header-z-index: 12;
+$header-z-index: 51;
 $mobile-header-z-index: 26;
 $main-container-z-index: 18;
 $send-card-z-index: 20;
